fixing my videos to cloudinary

--- a/dashboard/templates/dashboard/Ghadco_Users_Dashboard.html
+++ b/dashboard/templates/dashboard/Ghadco_Users_Dashboard.html
@@ -137,7 +137,7 @@
 
         <div class="video-container">
           <video autoplay muted loop playsinline class="background-video">
-              <source src="{% static 'images/Mamuda products ads ph.mp4' %}" type="video/mp4">
+              <source src="https://res.cloudinary.com/djq2ywwry/video/upload/v1751669387/Mamuda_products_ads_ph_lpvkmz.mp4" type="video/mp4">
               Your browser does not support the video tag.
           </video>
         </div>
@@ -151,7 +151,7 @@
           <a href="{% url 'Beverage_list' %}" onclick="window.location.href=this.href; return false;">
             <div class="products">
               <video autoplay muted loop playsinline>
-                <source src="{% static 'images/bev-video.mp4' %}" type="video/mp4">
+                <source src="https://res.cloudinary.com/djq2ywwry/video/upload/v1751668953/bev-video_a205kx.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
               <h4 class="bev-title">Beverage</h4>
@@ -171,7 +171,7 @@
           <a href="{% url 'Care_list' %}">
               <div class="products3">
                   <video autoplay muted loop playsinline>
-                    <source src="{% static 'images/care-video.mp4' %}" type="video/mp4">
+                    <source src="https://res.cloudinary.com/djq2ywwry/video/upload/v1751669065/care-video_xzeq3s.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
                   <h4 class="care-title">Care</h4>
@@ -181,7 +181,7 @@
             <a href="{% url 'Beauty_list' %}">
               <div class="products4">
                   <video autoplay muted loop playsinline>
-                    <source src="{% static 'images/beauty-video.mp4' %}" type="video/mp4">
+                    <source src="https://res.cloudinary.com/djq2ywwry/video/upload/v1751668572/beauty-video_s9wkxg.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
                   <h4 class="beauty-title">Beauty</h4>
