fixing my food video in dashboard page

--- a/dashboard/templates/dashboard/Ghadco_Users_Dashboard.html
+++ b/dashboard/templates/dashboard/Ghadco_Users_Dashboard.html
@@ -163,7 +163,7 @@
           <a href="{% url 'Food_list' %}">
             <div class="products2">
               <video autoplay muted loop playsinline>
-                <source src="{% static 'images/food-video.mp4' %}" type="video/mp4">
+                <source src="https://res.cloudinary.com/djq2ywwry/video/upload/v1751886343/food-video_ergrkt.mp4">
                 Your browser does not support the video tag.
                 </video>
                 <h4 class="food-title">Foods</h4>
