still on the fund wallet ..now creating a webhook for wallet funding balance

--- a/dashboard/templates/dashboard/Ghadco_Users_Dashboard.html
+++ b/dashboard/templates/dashboard/Ghadco_Users_Dashboard.html
@@ -67,7 +67,7 @@
               <!-- LEFT: Balance + Fund Wallet -->
               <div class="wallet-section">
                 <div class="wallet-balance">
-                ◼ Available Balance: ₦{{ user.wallet_balance|floatformat:2 }}
+                ◼ Available Balance: ₦{{ user.wallet.balance|floatformat:2 }}
                 </div>
                 <a href="{% url 'fund_wallet' %}" class="fund-wallet-btn"> + Add Money</a>
               </div>  
