--- a/dashboard/templates/dashboard/flutterwave_test.html
+++ b/dashboard/templates/dashboard/flutterwave_test.html
@@ -161,7 +161,7 @@
         customizations: {
             title: "Fund Your Wallet",
             description: "Payment for account funding",
-            logo: "https://yourdomain.com/static/logo.png"
+            logo: "https://distributors-application-django.onrender.com/static/images/CHIAMO_MULTITRADE-removebg-preview(1).png"
         }
         });
     });
